Better CSS approach for the page, and sales operating properly

--- a/src-frontend/product.html
+++ b/src-frontend/product.html
@@ -10,19 +10,13 @@
 
 </head>
 <body>
-    <div class="navbar">
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="sale.html">Venta</a></li>
-            <li><a href="reports.html">Reportes</a></li>
-            <li id="dropdown"><a>Administrar</a>
-                <div class="dropdown-elements">
-                    <a href="product.html" class="dropdown-content dropdown">Products</a>
-                    <a href="client.html" class="dropdown-content dropdown">Clients</a>
-                </div>
-            </li>
-            <li><a href="inventory.html">Inventario</a></li>
-        </ul>
+    <div class="sidebar" id="sidebar">
+        <div class="links">
+            <a href="index.html">Home</a>
+            <a href="sale.html">Venta</a>
+            <a href="reports.html">Reportes</a>
+            <a href="inventory.html">Inventario</a>
+        </div>
     </div>
 
 <h1 class="title">Productos</h1>
@@ -42,20 +36,21 @@
         <div class="inputbox">
             <span>Precio</span>
             <input type="number" id="cost" readonly>
+            <span id="currentCurrency" class="currencyLabel">$</span>
         </div>
         <div class="inputbox">
             <span>Categoria</span>
             <select class="category">
 
             </select>
+            <button class="btn add" id="add"><i class="fa fa-plus"></i>Producto</button>
         </div>
     </div>
 
     <div class="buttons">
-        <button class="btn add" id="add"><i class="fa fa-plus"></i>Producto</button>
-        <button class="btn add" id="addCategory"><i class="fa fa-plus"></i>Categoria</button>
-        <!-- <button class="btn modify" id="modify"><i class="fa fa-edit"></i>Modificar</button>
-        <button class="btn remove" id="remove"><i class="fa fa-trash"></i>Remover</button> -->
+        <h3>Categorias</h3>
+        <button class="btn add" id="addCategory"><i class="fa fa-plus"></i>Agregar</button>
+        <button class="btn remove" id="removeCategory"><i class="fa fa-trash"></i>Remover</button>
     </div>
 
     
@@ -63,7 +58,7 @@
     <table class="table">
         <thead>
             <th id="idcolumn">ID</th>
-            <th id="quantitycolumn">Quantity</th>
+            <th id="quantitycolumn">Cantidad</th>
             <th id="namecolumn">Nombre</th>
             <th id="pricecolumn">Precio</th>
             <th id="categorycolumn">Categoria</th>
@@ -81,8 +76,6 @@
 
 </div>
 
-
-
 <dialog id="addItemDialog" class="custom-dialog">
     <form method="dialog" class="dialog-form" id="dialogForm">
         <h2 class="dialog-title">Nuevo Producto</h2>
@@ -92,7 +85,7 @@
         </div>
         <div class="custom-inputbox number">
             <label for="price">Precio:</label>
-            <input type="number" id="price" name="price" step="0.10" placeholder="0.00" inputmode="decimal" required>
+            <input type="number" id="price" name="price" step="0.01" placeholder="0.00" required>
         </div>
         <div class="custom-inputbox">
             <label for="category">Categorias:</label>
@@ -131,6 +124,20 @@
         </div>
     </form>
 </dialog>
+<!-- DELETE CATEGORIES -->
+<dialog id="removeCategoryDialog" class="custom-dialog">
+    <form method="dialog" class="dialog-form" id="removeCategoryForm">
+        <h2 class="dialog-title ">Selecciona la Categoria</h2>
+        <div class="categoryInput">
+            <span>Categoria</span>
+            <select class="category" id="categoryInput">
+
+            </select>
+        </div>
+        <button class="btn remove" id="removeCategory"><i class="fa fa-trash"></i>Remover</button>
+    </form>
+</dialog>
+
 <!-- ARE YOU SURE? -->
 <dialog id="areyousure" class="custom-dialog">
         <h1 id="removeMessage">Quieres eliminar </h1>
@@ -150,7 +157,7 @@
     </div>
     <div class="inputbox">
         <span>Precio</span>
-        <input type="number" id="cost" class="edit-input" required>
+        <input type="number" id="cost" class="edit-input" name="price" step="0.01" placeholder="0.00" required>
     </div>
     <div class="inputbox">
         <span>Categoria</span>
@@ -165,7 +172,8 @@
 
 <script type="module" src="./js/product.js" ></script>
 <script type="module" src="./js/pages/productPage.js"></script>
-
+<script type="module" src="./js/pages/productDialog.js"></script>
+<script type="module" src="./js/pages/categoryDialogs.js"></script>
 
 </body>
 </html>
