--- a/src-frontend/index.html
+++ b/src-frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SMS</title>
-    <link rel="stylesheet" href="css/index/index.css">
+    <link rel="stylesheet" href="css/sidebar.css">
 
 </head>
 <body>
